--- a/docker/nginx/production/default.conf
+++ b/docker/nginx/production/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name boilerplate.saasitive.com;
+    server_name helppeople.prometheusit.fun;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,11 +14,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name boilerplate.saasitive.com;
+    server_name helppeople.prometheusit.fun;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/boilerplate.saasitive.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/boilerplate.saasitive.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/helppeople.prometheusit.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/helppeople.prometheusit.fun/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
